# chime

./: .bldr.toml  .dockerignore  .envrc  .gitignore  .studiorc  CHIME.py  CODE_OF_CONDUCT.html  CONTRIBUTING.html  DEVELOPER_GUIDE.md  Dockerfile  Dockerfile.dash  GLOSSARY.html  LICENSE  MAINTAINERS.html  MAINTAINERS.md  MANIFEST.in  Pipfile  Procfile  Procfile.streamlit  README.md  README.rst  app.py  date-first-hospitalized.cfg  docker-compose-dash.yml  docker-compose.test.yml  docker-compose.yml  doubling_time.cfg  environment.yml  heroku.yml  index.html  manual_tests.md  package-lock.json  pytest.ini  requirements.txt  runtime.txt  search_index.json  settings.cfg  setup.cfg  setup.py  setup.sh  (+2 more)
.github/: CHANGEMGMT.md  CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  pull_request_template.md
.holo/: config.toml
.streamlit/: config.toml  credentials.toml
chime/: models.py  presentation.py
contributing/: app-dev.html  data-analysis.html  operations-support.html
cypress/: package-lock.json
defaults/: PPE_Usage_Draft_CC_modifications_v2.xlsx  cli.cfg  cypress.cfg  date_first_hospitalized.cfg  doubling_time.cfg  readme.txt  webapp.cfg
docs/: CONTRIBUTING.md  DEVELOPER_GUIDE.md  GLOSSARY.md  MAINTAINERS.md  README.md  SUMMARY.md  book.json
e2e/: .gitignore  cypress.json  package-lock.json  package.json
getting-started/: run-locally.html  try-online.html
habitat/: README.md  default.toml  plan.sh
helm/: README.md
helm-chart/: Chart.yaml  values.yaml
k8s/: app.yaml  chime.yaml  infra.yaml  prometheus.yml
k8s-preprod/: app.yaml
k8s.preprod/: app-ingress.yaml
k8s.prod/: app-ingress.yaml
operations/: byok8s.html  chime-live-cluster.html  habitat.html  heroku.html  manual-validation.html  prepare-new-chime-release.html  release-automation.html  release-process.html
penn_chime/: components.py  defaults.py  models.py  presentation.py  settings.py  test_app.py  (+1 more)
(+255 files in other folders)
